tickets: Fix subject display for non text fields
If the subject field is something crazy, such as an HTML field, ensure that
the layout of the ticket queue is preserved and properly truncated.
Furthermore, ensure that the HTML is properly rendered on the client and
staff ticket view pages.

--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -115,15 +115,16 @@ fieldset {
   padding: 0;
 }
 /* Typography */
-a {
+a, .link {
   color: #0072bc;
   text-decoration: none;
   display: inline-block;
   margin-bottom: 1px;
 }
-a:hover {
+a:hover, .link:hover {
     border-bottom: 1px dotted #0072bc;
     margin-bottom: 0;
+    cursor: pointer;
 }
 h1 {
   color: #00AEEF;
